--- a/SalesWebMVC/Views/Sellers/Index.cshtml
+++ b/SalesWebMVC/Views/Sellers/Index.cshtml
@@ -1,10 +1,45 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿@model IEnumerable<SalesWebMVC.Models.Seller>
+
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Sellers";
 }
 
-<h2>Sellers</h2>
+<h2>@ViewData["Title"]</h2>
 
-<p>Sellers index</p>
+<table class="table table-striped table-hover">
+    <thead>
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.Name)
+            </th><th>
+                @Html.DisplayNameFor(model => model.Email)
+            </th><th>
+                @Html.DisplayNameFor(model => model.BirthDate)
+            </th><th>
+                @Html.DisplayNameFor(model => model.BaseSalary)
+            </th>
+        </tr>
+    </thead>
+
+    <tbody>
+        @foreach(var seller in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => seller.Name)
+                </td><td>
+                    @Html.DisplayFor(modelItem => seller.Email)
+                </td><td>
+                    @Html.DisplayFor(modelItem => seller.BirthDate)
+                </td><td>
+                    @Html.DisplayFor(modelItem => seller.BaseSalary)
+                </td>
+                <td>
+                    <a asp-action="Edit" asp-route-id="@seller.Id">Edit</a> |
+                    <a asp-action="Details" asp-route-id="@seller.Id">Detalis</a> |
+                    <a asp-action="Delete" asp-route-id="@seller.Id">Delete</a>
+                </td>
+            </tr>
+        }
+    </tbody>
+</table>
