--- a/SalesWebMVC/Views/Shared/_Layout.cshtml
+++ b/SalesWebMVC/Views/Shared/_Layout.cshtml
@@ -27,6 +27,8 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Sellers" asp-action="Index">Sellers</a>
+                        </li><li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="SalesRecords" asp-action="Index">Sales Records</a>
                         </li>
                     </ul>
                 </div>
